--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,24 @@
 {
-    "name": "YunoHost example app",
-    "id": "ynhexample",
+    "name": "STUN/TURN server",
+    "id": "coturn_ynh",
     "packaging_format": 1,
     "description": {
-        "en": "Explain in *a few (10~15) words* the purpose of the app or what it actually does (it is meant to give a rough idea to users browsing a catalog of 100+ apps)",
-        "fr": "Expliquez en *quelques* (10~15) mots l'utilité de l'app ou ce qu'elle fait (l'objectif est de donner une idée grossière pour des utilisateurs qui naviguent dans un catalogue de 100+ apps)"
+        "en": "Enable audio/video calls in XMPP and possibly in others apps that need a STUN/TURN gateway.",
+        "fr": "Permet les appels audio/vidéo avec XMPP et potentiellement avec d'autres apps qui nécessitent une passerelle STUN/TURN."
     },
     "version": "1.0~ynh1",
-    "url": "https://example.com",
+    "url": "https://github.com/coturn/coturn/",
     "license": "free",
     "maintainer": {
-        "name": "John doe",
-        "email": "john.doe@example.com",
-        "url": "http://example.com"
+        "name": "glougloumoute",
+        "email": "glougloumoute@users.noreply.github.com",
     },
     "requirements": {
         "yunohost": ">= 4.1.3"
     },
-    "multi_instance": true,
+    "multi_instance": false,
     "services": [
-        "nginx",
-        "php7.0-fpm",
-        "mysql"
+        "metronome"
     ],
     "arguments": {
         "install" : [
